@@ -45,7 +45,11 @@
 #define Arc WinArc
 #define Ellipse WinEllipse
 
+#ifdef USE_WINSOCK2
+#include <winsock2.h>
+#else
 #include <winsock.h>
+#endif
 
 #undef Ellipse
 #undef Arc
